modified components for fixing cropped Dropcap

--- a/components/ContentWrapperAdvertorial/ContentWrapperAdvertorial.module.scss
+++ b/components/ContentWrapperAdvertorial/ContentWrapperAdvertorial.module.scss
@@ -23,7 +23,7 @@
     .dropcap {
       color: var(--wpe--color--black);
       font-family: 'DreamOrphans-Regular';
-      font-weight: 700;
+      font-weight: unset;
       margin: 0;
       padding: 0;
       padding-right: 0.5rem !important;
@@ -286,7 +286,7 @@
     .dropcap {
       color: var(--wpe--color--black);
       font-family: 'DreamOrphans-Regular';
-      font-weight: 700;
+      font-weight: unset;
       margin: 0;
       padding: 0;
       padding-right: 0.5rem !important;
