--- a/components/TabsEditor/TabsEditor.module.scss
+++ b/components/TabsEditor/TabsEditor.module.scss
@@ -30,7 +30,7 @@
     .dropcap {
       color: var(--wpe--color--black);
       font-family: 'DreamOrphans-Regular';
-      font-weight: 700;
+      font-weight: unset;
       margin: 0;
       padding: 0;
       padding-right: 0.5rem !important;
